# teachai

./: .gitignore  .gitmodules  README.md  env.polygon_mumbai
Frontend/: .env.example  .graphclientrc.yml  .graphql  README.md  next.config.js  package-lock.json  package.json
Frontend/abi/: PromptMarketContract.json  abi.ts
Frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
Frontend/app/account/: page.tsx
Frontend/app/history/: page.tsx
Frontend/app/profile/: page.tsx
Frontend/components/: account.tsx  empty-screen.tsx  header.tsx  load-fiat.tsx  prompt-form.tsx  simple-table.tsx  world-coin-connect.tsx
WebApp/: package.json  tsconfig.json
WebApp/src/: App.tsx  Input.tsx  Inspect.tsx  Network.tsx  Notices.tsx  Reports.tsx  Vouchers.tsx  index.tsx
cartesi-subgraph/: package.json  schema.graphql  subgraph.template.yaml
cartesi-subgraph/config/: mumbai.json
cartesi-subgraph/src/: PromptMarket.ts
contracts/: README.md
frontend-console/: package-lock.json  package.json
llm-data/: README.md  pyproject.toml
llm-data/llm_data/: drafting.ipynb
servers/server/: pyproject.toml
servers/server/server/: draft.ipynb  server.py  ws_server.py
stories15m/: Dockerfile  README.md  docker-bake.override.hcl  docker-compose.override.yml  entrypoint.sh  run  stories.py
subgraph/: package-lock.json  package.json  schema.graphql  subgraph.template.yaml  subgraph.yaml
subgraph/abis/: PromptMarketContract.json
subgraph/config/: mumbai.json
subgraph/src/: FileSource.ts  PromptMarket.ts  TeachAI.ts
subgraph/src/utils/: constants.ts
(+4 files in other folders)
